<resources>
    <string name="app_name">Calculator</string>
    <string name="delete">C</string>
    <string name="Х">Х</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dev">÷</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mult">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="procent">%</string>
    <string name="deleteAll">AC</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="pow">^</string>
    <string name="pi">pi</string>
    <string name="factorial">!</string>
    <string name="lclip">(</string>
    <string name="rclip">)</string>
    <string name="tg">tg</string>
    <string name="history">History</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="exp">Введенное выражение:</string>
    <string name="answ">Ответ:</string>
</resources>
