<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/color4"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/recentActions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textSize="40sp"
            android:scrollHorizontally="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="pushPrevious">

        </TextView>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color1">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="horizontal"
        >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:textSize="50sp"></TextView>
        </HorizontalScrollView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="@color/colorBlack"
        >

        <LinearLayout style="@style/LinearLayoutButtons">

            <Button
                android:id="@+id/button1"
                style="@style/NumbersTheme"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                style="@style/NumbersTheme"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                style="@style/NumbersTheme"
                android:text="@string/three" />

            <Button
                android:id="@+id/buttonDev"
                style="@style/NumbersTheme"
                android:text="@string/dev" />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutButtons">

            <Button
                android:id="@+id/button4"
                style="@style/NumbersTheme"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                style="@style/NumbersTheme"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                style="@style/NumbersTheme"
                android:text="@string/six" />

            <Button
                android:id="@+id/buttonMultiplication"
                style="@style/NumbersTheme"
                android:text="@string/mult" />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutButtons">

            <Button
                android:id="@+id/button7"
                style="@style/NumbersTheme"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                style="@style/NumbersTheme"
                android:text="@string/eight"  />

            <Button
                android:id="@+id/button9"
                style="@style/NumbersTheme"
                android:text="@string/nine"  />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/NumbersTheme"
                android:text="@string/minus" />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutButtons">

            <Button
                android:id="@+id/buttonDot"
                style="@style/NumbersTheme"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button0"
                style="@style/NumbersTheme"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonProcent"
                style="@style/NumbersTheme"
                android:text="@string/procent" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/NumbersTheme"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/buttonADel"
                style="@style/NumbersTheme"
                android:text="@string/deleteAll" />

            <ImageButton
                android:id="@+id/buttonDel"
                android:src="@drawable/ic_backspace_black_24dp"
                style="@style/NumbersTheme"
                android:text="@string/delete" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:background="@color/color6"
                android:textSize="60dp"
                android:text="@string/equal"
                android:onClick="onButtonClick"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

